[package]
name = "filterlists-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "filterlists_api"
path = "src/lib.rs"

[dependencies]
readonly = "0.2.12"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["json"], optional = true }
reqwasm = { version = "0.5.0", optional = true }
async-trait = "0.1.80"
thiserror = "1.0.61"

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
reqwasm = ["dep:reqwasm"]
